Always show scrollbar for body (stops sidebar popping)

--- a/assets/doc.css
+++ b/assets/doc.css
@@ -33,6 +33,7 @@ body {
   background-color: #fcfcf8;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
+  overflow: scroll;
 }
 
 /*
